@@ -51,6 +51,7 @@ bugfix:
 - fix class-authenticationRule |  fix for FW config - typos related to XML xpath finding
 - fix class-IkeCryptoProfileStore | -IKEGateway | -IKEGatewayStore | -IPsecCryptoProfileStore | -IPsecTunnel | -IPsecTunnelStore || improve data handling during script execution
 - fix class-VirtualRouter | fix if object not found for getting the interface IP
+- fix description field for rules and objects was increased to 1023 characters with PAN-OS 7.1 | update all relevant places
 
 
 1.5.14 (20180227)
